@@ -4,9 +4,9 @@
 #pragma GCC system_header
 #endif
 
-#define __W32API_VERSION 3.1
+#define __W32API_VERSION 3.2
 #define __W32API_MAJOR_VERSION 3
-#define __W32API_MINOR_VERSION 1
+#define __W32API_MINOR_VERSION 2
 
 /* The following defines are for documentation purposes.  The following defines
  * identify the versions of Windows and Internet Explorer.  They are not to be
